# ZiaMart

./: README.md  compose.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
services/user/: Dockerfile  main.py  pyproject.toml
services/users/: .env  Dockerfile  Dockerfile.dev  pyproject.toml
services/users/tests/: test_user_service.py
services/users/users/: auth.py  db.py  kafka.py  main.py
services/users/users/config/: settings.py
services/users/users/config/env/: dev.env
services/users/users/consumer/: kafka_utils.py  main.py
services/users/users/models/: user.py
services/users/users/producer/: main.py  user_events.py
services/users/users/protobuf/: user.proto  user_pb2.py
services/users/users/repositories/: user_repository.py
services/users/users/routes/: user_routes.py
services/users/users/services/: user_service.py
